# icuas25_competition

./: .gitignore  CMakeLists.txt  Dockerfile  first_run.sh  package.xml
config/: config.rviz  nothing.rviz  only_octomap.rviz
icuas25_competition/: path_planner.cpp
launch/: cf_velmux_launch.py  octomap_server.launch.py  sitl_multiagent_text.sh
scripts/: a.txt  crazyposition.py  find_and_publish_arucos.py  graph.py  manage_trajectories.py  manage_trajectories_pedro.py  manager_battery.py  optimal_trajectory.py  pub_go_to.py  pub_occupancy.py  teste.py  teste2.py  teste3.py  teste4.py  teste5.py  teste6.py  trajectory.py  trajectory_utils.py
src/: a.txt  c.txt  expand_octomap.cpp  graph.cpp  hotspots.cpp  octomap_colorizer.cpp  path_planner.cpp  pose_aruco.cpp  sphere_pub.cpp  territorial_waters.cpp
srv/: PathService.srv
startup/: _setup.sh  mapping.sh  mapping.yml  octomap.yml  otcomap.yml  pub_go.sh  pub_go.yml  session.yml  test.sh  test.yml
to_copy/: city_1_world.db3  crazyflie_server.py  test_1_world.db3  test_2_world.db3
worlds/: Dockerfile  city_1_arucos.sdf  city_1_small_world.sdf  empty.sdf  test_1_world.sdf  test_2_world.sdf
worlds/city_1_arucos/: model.config  model.sdf
worlds/config/: only_octomap.rviz
worlds/launch/: octomap_server.launch.py  sitl_multiagent_text.sh
worlds/scripts/: rviz_publishers.py
worlds/src/: hotspots.cpp
worlds/startup/: octomap.yml  session.yml
worlds/test_1/: model.sdf
worlds/test_1/meshes/: test_1.stl
worlds/test_2/meshes/: test_2.binvox.bt
worlds/worlds/: city_1_arucos.sdf  city_1_world.sdf
worlds/worlds/test_1/: model.config
worlds/worlds/test_1/meshes/: test_1.binvox.bt
worlds/worlds/test_2/: model.sdf
worlds/worlds/test_2/meshes/: test_2.stl
